--- a/public/style.css
+++ b/public/style.css
@@ -1,107 +1,104 @@
 * {
-    box-sizing: border-box;
-    font-family: Roboto Mono;
-  }
-  
-  body {
-    background: white;
-    background-color: #F7F2D9;
-    margin: 20;
-  }
-  
-  nav {
-    height: 80px;
-    position: absolute;
-    left: 0%;
-    right: 0%;
-    top: 0%;
-    background: #c4c4c4;
-  }
-  
-  main {
-    padding: 20px;
-  }
-  
-  h1 {
-    height: 98px;
-    font-style: normal;
-    display: flex;
-    align-items: flex-end
-  }
-  
-  a {
-    font-style: normal;
-    font-weight: normal;
-    text-decoration-line: underline;
-    color: #000000;
-    font-size: 30px;
-    line-height: 16px;
-  }
-  
-  #link1 {
-    left: 1.25%;
-    right: 84.62%;
-    top: 27.78%;
-    bottom: 12.96%;
-    font-size: 24px;
-    line-height: 32px;
-    padding: 10px;
-  }
-  
-  
-  
-  ul, #container {
-    width: 100%;
-    padding-left: 0;
-  }
-  
-  li {
-    list-style: none;
-  }
-  
-  img {
-    float: left;
-    margin: 10px;
-    width: 150px;
-    height: 300x;
-  }
-  
-  
-  h1, .name {
-    font-size: 36px;
-    color: #417BAF;
-  }
-  
-  form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex-grow: 1;
-    width: 400px;
-    margin: 1em;
-  }
-  
-  button {
-    display: inline-block;
-    border: 1px solid rgb(20, 20, 20);
-    margin: 20px;
-    width: 100px;
-    height: 50px;
-    text-align: center;
-    vertical-align: middle;
-    background: rgb(168, 87, 87);
-    font-size: large;
-    border-radius: 10px;
-  }
-  
-  input {
-    padding: 0.3em;
-    margin: 0.5em 0;
-    font-size: 1.5em;
-  }
+  box-sizing: border-box;
+  font-family: Roboto Mono;
+}
 
-  .row {
-    white-space: nowrap;
-  }
-  
-  
+body {
+  background: white;
+  background-color: #f7f2d9;
+  margin: 20;
+}
+
+nav {
+  height: 80px;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  top: 0%;
+  background: #c4c4c4;
+}
+
+main {
+  padding: 20px;
+}
+
+h1 {
+  height: 98px;
+  font-style: normal;
+  display: flex;
+  align-items: flex-end;
+}
+
+a {
+  font-style: normal;
+  font-weight: normal;
+  text-decoration-line: underline;
+  color: #000000;
+  font-size: 30px;
+  line-height: 16px;
+}
+
+#link1 {
+  left: 1.25%;
+  right: 84.62%;
+  top: 27.78%;
+  bottom: 12.96%;
+  font-size: 24px;
+  line-height: 32px;
+  padding: 10px;
+}
+
+ul,
+#container {
+  width: 100%;
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
+}
+
+img {
+  float: left;
+  margin: 10px;
+  width: 150px;
+  height: 300x;
+}
+
+h1,
+.name {
+  font-size: 36px;
+  color: #417baf;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  width: 400px;
+  margin: 1em;
+}
+
+button {
+  display: inline-block;
+  border: 1px solid rgb(20, 20, 20);
+  margin: 20px;
+  width: 100px;
+  height: 50px;
+  text-align: center;
+  vertical-align: middle;
+  background: rgb(168, 87, 87);
+  font-size: large;
+  border-radius: 10px;
+}
+
+input {
+  padding: 0.3em;
+  margin: 0.5em 0;
+  font-size: 1.5em;
+}
+
+.row {
+  white-space: nowrap;
+}
